--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         finalRotation = (Math.random() - 0.5) * 30;
       }
 
-      el.style.backgroundImage = `url('${imgNum}.webp')`;
+      el.style.backgroundImage = `url('./source/${imgNum}.webp')`;
       el.style.left = posX + 'vw';
       el.style.setProperty('--rot', `${finalRotation}deg`);
       
@@ -208,19 +208,32 @@
       const bh = btnNo.offsetHeight;
       const vw = window.innerWidth;
       const vh = window.innerHeight;
-
-      const maxJump = Math.min(vw, vh) * CONFIG.noMovePercent;
-      const minJump = bw; 
-
-      const angle = Math.random() * Math.PI * 2;
-      const dist = Math.random() * (maxJump - minJump) + minJump;
-
-      let nextX = currentX + Math.cos(angle) * dist;
-      let nextY = currentY + Math.sin(angle) * dist;
-
       const pad = 20;
-      nextX = Math.max(pad, Math.min(nextX, vw - bw - pad));
-      nextY = Math.max(pad, Math.min(nextY, vh - bh - pad));
+
+      const yesRect = btnYes.getBoundingClientRect();
+      const buffer = 40;
+
+      let nextX, nextY;
+      let collision = true;
+      let attempts = 0;
+
+      while (collision && attempts < 20) {
+        nextX = Math.random() * (vw - bw - pad * 2) + pad;
+        nextY = Math.random() * (vh - bh - pad * 2) + pad;
+
+        const forbiddenMinX = yesRect.left - bw - buffer;
+        const forbiddenMaxX = yesRect.right + buffer;
+        const forbiddenMinY = yesRect.top - bh - buffer;
+        const forbiddenMaxY = yesRect.bottom + buffer;
+
+        const overlapsX = nextX > forbiddenMinX && nextX < forbiddenMaxX;
+        const overlapsY = nextY > forbiddenMinY && nextY < forbiddenMaxY;
+
+        if (!(overlapsX && overlapsY)) {
+          collision = false;
+        }
+        attempts++;
+      }
 
       currentX = nextX;
       currentY = nextY;
